# Nedvizhka

./: .gitignore  .hintrc  ARCHITECTURE.md  MEMORY.md  Makefile  README.md  Zadacha.txt  checklist.md  deploy_admin_fixes.py  docker-compose.prod.yml  docker-compose.yml  evidence.md  git_setup.md  hotfix_frontend.py  manage.ps1  rescue_admin.py  restart_web.py
apps/api/: .env  .env.example  Dockerfile  check_users.py  create_admin.py  debug_auth.py  dev.ps1  estate_analytics.db  pyproject.toml  requirements.txt  reset_password.py  seed_infra.py  test_api.py  test_geocoding.py  test_login.py  update_db.py  verify_2gis.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2196de3ff51e_merge_marker_icon_and_existing_head.py  2f3d8eb2b247_add_missing_fields_to_property.py  34dd6fcb6575_add_missing_fields_to_property.py  516b453f2beb_add_users_table.py  7d8e9f1a2b3c_add_range_fields_and_price_per_sqm.py  8e9f1a2b3c4d_add_developer_properties_fields.py  9f1a2b3c4d5e_add_property_complex_fk.py  a1b2c3d4e5f6_add_videos_field.py  b28f67a5ca5a_initial_property_model_sqlite.py  b2c3d4e5f6g7_add_marker_icon.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  logging.py  middleware.py
apps/api/app/models/: __init__.py  complex.py  content.py  district.py  infrastructure.py  price_history.py  (+3 more)
apps/api/estate_analytics_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_properties.py  verify_manual_creation.py  verify_manual_creation_fixed.py  verify_real_integration.py  verify_url_creation.py
(+209 files in other folders)
